# Wormhole

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci-cli.yml  ci-faas.yml  publish-npm.yml
cli/: esbuild.config.js  eslint.config.mjs  package-lock.json  package.json
cli/src/: certs.js  cli.js  index.js  mux.js  quic.js
cli/test/: wormhole.test.js
faas/: Cargo.toml
faas/.cargo/: config.toml
faas/benches/: router_bench.rs
faas/src/: ingress.rs  ingress_udp.rs  lib.rs  main.rs  relay.rs  router.rs  tachyon_net.rs  tls.rs
faas/tests/: integration_test.rs
manifest/: config.yaml
openspec/changes/archive/2026-05-11-core-architecture/: design.md  proposal.md
openspec/changes/archive/2026-05-11-dev-mode-and-auto-certs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-observability-and-qos/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-public-ingress-and-quic/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-tachyon-edge-networking/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-tunnel-resilience/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-udp-ingress-and-routing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-zero-trust-security/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-14-audit-remediation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-14-ci-cd-hygiene-and-linting/: design.md  (+2 more)
openspec/changes/core-architecture/: tasks.md
(+24 files in other folders)
