[package]
name = "wormhole-relay"
version = "0.3.0"
edition = "2021"
description = "Wormhole FaaS relay — stateless QUIC router for Tachyon-Mesh"
license = "MIT"

[[bin]]
name = "wormhole-relay"
path = "src/main.rs"

[lib]
name = "wormhole_relay"
path = "src/lib.rs"

[dependencies]
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
dashmap = "6"
rcgen = "0.13"
tls-parser = "0.12"
x509-parser = "0.15"
rustls-pemfile = "2"
aes = "0.8"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
